--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "axios-retry": "^4.0.0",
+    "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "node-telegram-bot-api": "^0.64.0"
   }
