--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node-telegram-bot-api": "^0.64.2",
     "typescript": "^5.3.3"
   },
@@ -19,6 +20,7 @@
     "axios-retry": "^4.0.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "express": "^4.19.1",
     "node-telegram-bot-api": "^0.64.0"
   }
 }
