--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios-retry": "^4.0.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "node-telegram-bot-api": "^0.64.0"
   }
 }
